[package]
name = "dice"
version = "0.1.0"
edition = "2021"
description = "Easy dice PRNG with an easy to understand/parse script"
repository = "https://github.com/ethereal-sheep/dice"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dice"
path = "src/lib.rs"

[[bin]]
name = "dice"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
num-bigint = "0.4.6"
num-format = { version = "0.4.3", features = ["with-num-bigint"] }
num-traits = "0.2.19"
owo-colors = "4.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
termsize = "0.1.9"
voracious_radix_sort = "1.2.0"
